--- a/.prettierrc
+++ b/.prettierrc
@@ -8,7 +8,7 @@
     "quoteProps": "as-needed",
     "semi": false,
     "singleAttributePerLine": false,
-    "singleQuote": false,
+    "singleQuote": true,
     "trailingComma": "all",
     "tabWidth": 2
 }
